2010-12-29  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/specfun.c (ranf):  Place more restrictions on seed values
	used by rand(seed).

	* docs/gnuplot.doc (rand):  Updated documentation of rand()
	function with details about algorithm and allowable seeds.

2010-12-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/specfun.c:  Make all the numerical routines f_whatever()
	retrieve their argument via pop_or_convert_from_string().

	* src/specfun.c (ranf):  Disallow fractional seed values since
	truncation to an integer produces an invalid seed value of zero.

2010-12-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  Use t->set_color() rather than t->linetype() to
	set the fill color for pointinterval < 0 and for opaque key.
	Needed for windows terminal [any others?].

2010-12-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/win.trm: (WIN_point WIN_filled_polygon):
	Always draw point symbols using a solid line, even if the current 
	line type is dashed.  Unfortunately this fix is limited to monochrome
	mode.
	Bug #1952364

	* src/win/wgraph.c (drawgraph): Selecting linetype 16 caused
	corruption of the color and pen assignments in mono mode.

2010-12-14  Hans-Bernhard Broeker <broeker@physik.rwth-aachen.de>

	* config/watcom/Makefile, config/watcom/config.h: New version of
	Makefiles for OpenWatcom that builds outside the src tree.

	* config/config.oww (pclose, popen): New defines need to compile
	pipe-enabled version on OpenWatcom.

	* docs/Makefile.in (pdffigures): Make indirect target depending on
	pdffigures.tex, to avoid unconditional rebuild.
	(pdffigures.tex): New, renamed copy of previous target pdffigures.
	(figures): Set loadpath for demos; allow this to work from
	out-of-source builds.

	* docs/gnuplot.texi: Regenerated.

	* docs/gnuplot.doc: Clean up blank-only lines.

	* src/win/wtext.c, src/win/wprinter.c, src/win/wpause.c,
	src/win/wmenu.c, src/win/winmain.c, src/win/wgraph.c
	{HAVE_CONFIG_H}: Add "config.h" include.
