@@ -1,5 +1,5 @@
 #
-# $Id: timedat.dem,v 1.7 2003/10/28 05:35:54 sfeam Exp $
+# $Id: timedat.dem,v 1.8 2011/01/01 15:33:32 juhaszp Exp $
 #
 
 set title "Fsteps plot\nwith date and time as x-values"
@@ -18,6 +18,16 @@ plot 'timedat.dat' using 1:3 t '', \
      'timedat.dat' using 1:4 t '', \
      'timedat.dat' using 1:4 t 'PO4' with points 
 pause -1 "Hit return to continue"
+
+set key right
+set title "The same, with relative dates"
+unset xl
+set format x "%y years,\n%01m months\nago"
+set xrange [*:*]
+plot 'timedat.dat' using (time(0)-timecolumn(1)):3 t '', \
+     'timedat.dat' using (time(0)-timecolumn(1)):3 t 'Total P' with points, \
+     'timedat.dat' using (time(0)-timecolumn(1)):4 t '', \
+     'timedat.dat' using (time(0)-timecolumn(1)):4 t 'PO4' with points 
 
 reset
 
